- fixed SF# 3441822: thread safety issue in HTTPClientSession:
  always use getaddrinfo() instead of gethostbyname() on all platforms supporting it
- added version resource to POCO DLLs
- fixed SF# 3440599: Dir Path in Quotes in PATH cause PathTest::testFind to fail.
- fixed SF# 3406030: Glob::collect problem
- added Poco::Util::AbstractConfiguration::enableEvents() 


Release 1.4.2p1 (2011-09-24)
============================

- On Linux, the RTLD_DEEPBIND option is no longer passed to dlopen(). 
  This change was introduced in 1.4.2 to solve a specific problem one customer 
  was having. Unfortunately, it leads to problems with RTTI.
- It's now possible to pass flags (SHLIB_GLOBAL, SHLIB_LOCAL) to 
  Poco::SharedLibrary::load() (and the constructor implicitly calling load()), 
  controlling the mode flags (RTLD_GLOBAL, RTLD_LOCAL) passed to dlopen(). 
  On platforms not using dlopen(), these flags are ignored.
- fixed SF# 3400267: Path_WIN32.cpp bug


Release 1.4.2 (2011-08-28)
==========================

- added Poco::DateTimeFormat::ISO8601_FRAC_FORMAT
- added new Poco::DateTimeFormatter and Poco::DateTimeParser format specifier:
  %s for seconds with optional fractions of a second
- fixed a problem with ioctl() on BSD platforms (including OS X) where the 
  second argument to ioctl() is unsigned long instead of int, causing bad 
  things on a OS X 64-bit kernel.
- fixed a potential endless loop when enumerating IPv6 network addresses 
  (reported by Laurent Carcagno)
- new compile-time config option on Windows to set thread names in
  debugger. Enable with -DPOCO_WIN32_DEBUGGER_THREAD_NAMES. Available
  only in debug builds.
- Cipher can now create Base64 and HexBinary encoded output without linefeeds 
  (suitable for use in cookies, etc.)
- added Poco::Path::popFrontDirectory()
- improved VxWorks support
- IPv6 fixes: added proper scope id handling in IPAddress, SocketAddress
  and related classes.